[package]
name = "corncob"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"
categories = ["vm", "language", "cobol"]
description = "Lightweight VM in Rust for the COBOL language"
keywords = ["language", "COBOL", "virtual machine"]
license = "MIT OR Apache-2.0"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/CornCob.git"

# Compiler to bytecode.
[[bin]]
name = "corncobc"
test = false
bench = false

# VM.
[[bin]]
name = "corncob"
test = false
bench = false

[lib]
name = "corncob"

[dependencies]
nom = "6.1.2"
clap = "2.33.3"
