[package]
name = "corncob"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
categories = ["vm", "language", "cobol"]
description = "Lightweight VM in Rust for the COBOL language"
keywords = ["language", "COBOL", "virtual machine"]
license = "MIT OR Apache-2.0"
publish = false
readme = "/README.md"
repository = "https://github.com/shymega/CornCob.git"

# Compiler to bytecode.
[[bin]]
name = "corncobc"
test = false
bench = false

# VM.
[[bin]]
name = "corncob"
test = false
bench = false

[lib]
name = "corncob"

[dependencies]
clap = "4.3.10"

[profile.dev]
opt-level = 3
codegen-units = 1
debug = true
lto = true
strip = false
incremental = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = true
strip = false
incremental = false

[profile.release]
opt-level = 'z'
codegen-units = 1
debug = true
lto = true
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 'z'
codegen-units = 1
debug = true
strip = true
incremental = false
